third_party/move/move-compiler-v2/tests/unit_test/test/attribute_location_invalid.exp

Diagnostics:
error: unable to generate test
  ┌─ tests/unit_test/test/attribute_location_invalid.move:1:3
  │
1 │ #[test_only]
  │   ^^^^^^^^^ Testing attributes are not allowed in scripts.

error: invalid attribute
  ┌─ tests/unit_test/test/attribute_location_invalid.move:6:3
  │
6 │ #[test]
  │   ^^^^
  │   │
  │   Attribute 'test' is not expected with a module
  │   Expected to be used with one of the following: function

error: invalid attribute
   ┌─ tests/unit_test/test/attribute_location_invalid.move:10:7
   │
10 │     #[expected_failure(abort_code = 0)]
   │       ^^^^^^^^^^^^^^^^
   │       │
   │       Attribute 'expected_failure' is not expected with a struct
   │       Expected to be used with one of the following: function
